src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__handle_cases_2c_2e@COL3A1-2E.snap
---
source: src/strucvars/eval/del/section2.rs
expression: res
---
L2:
  L2E:
    suggested_score: 0.9
    pvs1_result: Pvs1

